feat: add page layout

--- a/style.css
+++ b/style.css
@@ -1,5 +1,336 @@
+@font-face {
+  font-display: swap;
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 400;
+  src: url("../fonts/montserrat-v26-cyrillic_latin-regular.woff2")
+    format("woff2");
+}
+
+@font-face {
+  font-display: swap;
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 500;
+  src: url("../fonts/montserrat-v26-cyrillic_latin-500.woff2") format("woff2");
+}
+
+@font-face {
+  font-display: swap;
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 600;
+  src: url("../fonts/montserrat-v26-cyrillic_latin-600.woff2") format("woff2");
+}
+
+@font-face {
+  font-display: swap;
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 700;
+  src: url("../fonts/montserrat-v26-cyrillic_latin-700.woff2") format("woff2");
+}
+
+@font-face {
+  font-display: swap;
+  font-family: "Montserrat";
+  font-style: italic;
+  font-weight: 700;
+  src: url("../fonts/montserrat-v26-cyrillic_latin-700italic.woff2")
+    format("woff2");
+}
+
+html {
+  position: relative;
+  box-sizing: border-box;
+  scroll-behavior: smooth;
+}
+
 *,
 *::before,
 *::after {
-  box-sizing: border-box;
+  box-sizing: inherit;
+}
+
+body {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
+  min-width: 320px;
+  min-height: 100vh;
+  background-color: #fafafa;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-rendering: optimizeLegibility;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  -webkit-tap-highlight-color: transparent;
+}
+
+img,
+svg {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+svg {
+  max-height: 100%;
+}
+
+button {
+  padding: 0;
+  cursor: pointer;
+  border: none;
+  background-color: transparent;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+h1,
+h2,
+h3,
+h4,
+p,
+figure,
+fieldset {
+  margin: 0;
+}
+
+iframe {
+  border: none;
+}
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0, 0, 0, 0);
+  overflow: hidden;
+}
+
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 32px;
+}
+
+.header,
+.footer {
+  font-size: 16px;
+  color: #fafafa;
+}
+
+.header__container,
+.footer__container {
+  background-color: #004d3c;
+}
+
+.header__nav-list,
+.footer__nav-list {
+  display: flex;
+  justify-content: space-around;
+  gap: 8px;
+  flex-wrap: wrap;
+  align-items: center;
+  height: 48px;
+}
+
+.nav__item-link:hover,
+.nav__item-link:focus,
+.footer__list-link:hover,
+.footer__list-link:focus {
+  color: #e4b994;
+  outline: none;
+}
+
+.nav__item-link:active,
+.footer__list-link:active {
+  color: #e08f48;
+}
+
+.main__container {
+  display: flex;
+  padding: 0;
+  background-color: #b8cfca;
+}
+
+.main__left {
+  min-width: 380px;
+  background-color: #e4b994;
+  color: #2e2e2e;
+}
+
+.main__contacts,
+.main__skills,
+.main__work {
+  margin-bottom: 32px;
+}
+
+.main__contacts-title,
+.main__skills-title,
+.main__work-title {
+  margin-bottom: 20px;
+  padding: 0 32px;
+  font-size: 24px;
+  font-style: italic;
+  font-weight: 600;
+  background-color: #e08f48;
+}
+
+.main__contacts-list,
+.main__skills-list,
+.main__work-list {
+  padding: 0 32px;
+}
+
+.main__photo-container {
+  margin-bottom: 40px;
+}
+
+.main__contacts-item,
+.main__skills-item,
+.main__work-item,
+.main__education-item {
+ margin-bottom: 16px;
+}
+
+.main__contacts-list li:last-child,
+.main__skills-list li:last-child,
+.main__work-list li:last-child,
+.main__education-list li:last-child {
+  margin-bottom: 0;
+}
+
+.main__contacts-link:hover,
+.main__contacts-link:focus,
+.main__work-link:hover,
+.main__work-link:focus {
+  color: #004d3c;
+  outline: none;
+}
+
+.main__contacts-link:active,
+.main__work-link:active {
+  color: #018f70;
+}
+
+.main__right {
+  padding: 0 60px;
+  color: #2e2e2e;
+}
+
+.main__info-container {
+  margin-bottom: 32px;
+  padding: 120px 0;
+  border-bottom: 2px solid #004d3c;
+}
+
+.main__info-title {
+  margin-bottom: 20px;
+  font-size: 50px;
+}
+
+.main__info-text {
+  font-size: 20px;
+}
+
+.about__title,
+.main__education-title,
+.main__experience-title,
+.main__code-title,
+.main__languages-title {
+  margin-bottom: 32px;
+  font-size: 24px;
+  font-style: italic;
+}
+
+.main__about,
+.main__education,
+.main__experience,
+.main__code {
+  margin-bottom: 54px;
+}
+
+.main__education-link:hover,
+.main__education-link:focus,
+.main__experience-link:hover,
+.main__experience-link:focus {
+  color: #e08f48;
+  outline: none;
+}
+
+.main__education-link:active,
+.main__experience-link:active {
+  color: #e4b994;
+}
+
+.main__experience-text,
+.main__languages-text {
+  margin-bottom: 16px;
+}
+
+.main__experience-text--decoration {
+  font-style: italic;
+}
+
+.main__experience-link {
+  font-style: normal;
+  font-weight: 600;
+}
+
+.main__experience-img {
+  width: 380px;
+  height: 228px;
+  border-radius: 15px;
+}
+
+.main__experience-sublink {
+  display: block;
+  width: 380px;
+  height: 228px;
+}
+
+.main__experience-img:hover {
+  box-shadow: 0px 0px 15px 5px rgba(0, 0, 0, 0.3);
+  -webkit-box-shadow: 0px 0px 15px 5px rgba(0, 0, 0, 0.3);
+  -moz-box-shadow: 0px 0px 15px 5px rgba(0, 0, 0, 0.3);
+}
+
+.main__experience p:last-child {
+  margin-bottom: 0;
+}
+
+.main__code-container {
+  width: 380px;;
+  margin: 0;
+  background-color: #fafafa;
+  border-radius: 15px;
+}
+
+@media (max-width: 860px) {
+  .main__container {
+    flex-direction: column;
+  }
+
+  .main__left {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .main__photo-container {
+    margin: 0 auto;
+  }
 }
